<resources>
    <string name="app_name">Poisonous King</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Don\'t have an account? Register now</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="enter_username_or_email">Enter your email address</string>
    <string name="enter_password">Enter password</string>
    <string name="king_card_game">King Card Game</string>
    <string name="king">LOG IN TO KING</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_button">REGISTER</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="your_nickname">Enter your username</string>
    <string name="already_have_an_account">I already have an account</string>
    <string name="google">Google</string>
    <string name="first_round">First Round Results</string>
    <string name="second_round">Second Round Results</string>
    <string name="third_round">Third Round Results</string>
    <string name="final_round">Final Results</string>
    <string name="facebook">Facebook</string>
    <string name="mail_ru">Mail.ru</string>
    <string name="log_out">LOG OUT</string>
    <string name="your_email_address">Email address</string>
    <string name="your_username">Username</string>
    <string name="todo">TODO</string>
    <string name="send_password_reset_link">SEND PASSWORD RESET LINK</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="remember_my_password">I already remember my password</string>
    <string name="play">PLAY ONLINE</string>
    <string name="your_rating">Your rating:</string>
    <string name="your_rank">Your rank:</string>
    <string name="seven_of_clubs">Seven of clubs</string>
    <string name="your_level">Your level:</string>
    <string name="total_wins">Total wins:</string>
    <string name="your_coins">Your coins:</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="total_loses">Total loses:</string>
    <string name="play_offline">PLAY OFFLINE</string>
    <string name="my_profile">MY DATA</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="country">Country</string>
    <string name="percentage_scale">Percentage Scale</string>
    <string name="_200">200</string>
    <string name="c_1">C1</string>
    <string name="_0">0</string>
    <string name="my_progress">MY PROGRESS</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="gender">Gender</string>
    <string name="total_games">Total games:</string>
    <string name="your_title">Newbie</string>
    <string name="wins">Wins:</string>
    <string name="loses">Loses:</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="id">ID</string>
    <string name="_500">500</string>
    <string name="play_200">PLAY</string>
    <string name="back">BACK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="game_rules">Game Rules</string>
    <string name="log_out_2">Log Out</string>
    <string name="change_color">Change Color</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="quick_game_description">Only 5 to 7 minutes. This mode will help beginners to roughly grasp the essence of the game. Game mode is called No King(simple trick +10 points, King of Hearts -70 points), which is played four times.</string>
    <string name="no_king">NO KING</string>
    <string name="new_username">Enter your new username</string>

    <string name="intro_in_game_rules">In this game the number of cards is 32, and the number of players is 4. It should be mentioned that one of the players shall be the user (you), whereas the other three shall be bots. At the beginning of the game eight cards shall be handed to each player at a time. At that moment only the first of Quick Game, Classic Game and Big Game modes is active.</string>
    <string name="quick_game_in_rules">This game consists of 4 rounds, and the game shall be started by the user (not the first step of each round, but it is you who always puts the first playing card). For winning it is necessary to score the maximum points. Here the trump first of all depends on the first playing card the user has put. For example:</string>
    <string name="points_in_rules">In this turn a winner is given 10 points, but if one of 4 playing cards is the king of hearts, 70 points shall be deducted from the winner’s points. It should also be mentioned, that at each play round the sum of points gained by all players equals to zero.</string>
    <string name="coins_in_rules">So that the user is able to play one of the game modes, which in this case is the only accessible Quick Game mode, he should  donate 100 out of his initial 2000 gold coins. In case of winning the user shall gain 300 gold coins, and in case of losing shall gain nothing.</string>
    <string name="rating_system_in_rules">All the users shall have an initial rating – 200 and titles which shall change depending on rating (a rating may also be negative):</string>
    <string name="rating_calculation_in_rules">The increase or decrease of a rating shall be established by the following scheme: let us suppose that upon 4 game rounds the final results will be:</string>
    <string name="greater_then_1500">greater than or equal to 1500 – KING</string>
    <string name="intro">Introduction</string>
    <string name="case_1">In this case it is the first player who wins</string>
    <string name="case_2">In this case it is the third player who wins</string>
    <string name="rating_title">The Rating System And Titles</string>

    <string-array name="titles">
        <item>Newbie</item>
        <item>Beginner</item>
        <item>Trainee</item>
        <item>Student</item>
        <item>Expert</item>
        <item>Master</item>
        <item>Veteran</item>
        <item>Captain</item>
        <item>Lord</item>
        <item>KING</item>
    </string-array>
</resources>