<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_whiteblack"
    android:padding="5sp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/king"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="75sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="15sp">

        <EditText
            android:id="@+id/email_text"
            android:layout_width="400sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:autofillHints="@string/email"
            android:background="@drawable/input_bg"
            android:drawableLeft="@drawable/sharp_alternate_email_24"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="400sp"
            android:layout_height="48sp"
            android:layout_gravity="center"
            android:layout_marginTop="13sp"
            android:autofillHints="@string/password"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_security_24"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="400sp"
        android:layout_marginTop="17sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/log_in"/>

        <TextView
            android:id="@+id/do_not_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_marginTop="7sp"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>