<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    tools:context=".outside_of_king.LogInActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="600sp"
        android:layout_height="330sp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493">

        <TextView
            android:id="@+id/king_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:fontFamily="@font/alata"
            android:text="@string/king"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="37sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="525sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10sp">

            <EditText
                android:id="@+id/email_address_or_username"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginTop="80sp"
                android:background="@drawable/rounded_corner"
                android:drawableStart="@drawable/email_icon_small"
                android:drawablePadding="10sp"
                android:fontFamily="@font/alata"
                android:hint="@string/enter_username_or_email"
                android:inputType="textEmailAddress"
                android:padding="12sp"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/alata"
                android:background="@drawable/rounded_corner"
                android:drawableStart="@drawable/password_logo_icon_small"
                android:drawablePadding="10sp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="12sp"
                android:autofillHints="password" />
            <!--android:drawableEnd="@drawable/visibility_off_icon_small"-->

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="8sp"
                android:layout_marginStart="385sp"
                android:fontFamily="@font/alata"
                android:text="@string/forgot_password"
                android:textColor="@color/grey_1" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/super_dark_green"
                android:text="@string/log_in"
                android:fontFamily="@font/alata"
                android:textColor="@color/white"
                app:cornerRadius="12sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="120sp"
            android:layout_height="36.5sp"
            android:textColor="@color/grey_1"
            android:fontFamily="@font/alata"
            android:gravity="center_vertical"
            android:theme="@style/colored_checkbox."
            android:text="@string/remember_me"
            android:layout_marginStart="47sp"
            android:layout_marginTop="198.5sp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_text_reference"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="290sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/alata"
            android:text="@string/register"
            android:textColor="@color/grey_1" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>