<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/king_text"
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/alata"
        android:text="@string/reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_address_or_username"
        android:layout_width="525sp"
        android:layout_height="48sp"
        android:layout_marginTop="196dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/outline_account_circle_24"
        android:drawablePadding="10sp"
        android:fontFamily="@font/alata"
        android:hint="@string/enter_username_or_email"
        android:inputType="textEmailAddress"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="400sp"
        android:layout_height="50sp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/super_dark_green"
        android:fontFamily="@font/alata"
        android:text="@string/send_password_reset_link"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address_or_username"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>