<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    tools:context=".UserProfileAttributesActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="275sp"
        android:layout_height="330sp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/fucking_green"
        app:cardCornerRadius="10sp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="315sp"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8sp"
                app:strokeWidth="5sp"
                app:strokeColor="@color/blue_grey"
                app:cardElevation="15dp">

                <ImageView
                    android:id="@+id/your_profile_picture"
                    android:layout_width="115sp"
                    android:layout_height="115sp"
                    android:layout_gravity="center"
                    android:background="@drawable/default_profile_outlines"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/default_profile_picture" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="225sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/your_rating"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alata"
                    android:text="200"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="225sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/your_rank"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alata"
                    android:text="@string/seven_of_clubs"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="225sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/your_level"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alata"
                    android:text="C_1"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="225sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:text="@string/your_coins"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="25sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/alata"
                    android:text="0"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="225sp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="2.5dp"> <!-- Half of the height to create a circular corner -->
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:fontFamily="@font/alata"
                    android:text="Percentage Scale"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
